@@ -1,14 +1,0 @@
-package daveayan.gherkinsalad.components;
-
-import org.junit.Test;
-
-import daveayan.BaseTest;
-
-public class MiscTest extends BaseTest {
-	@Test public void report_verification_test() {
-		super.launch_browser("chrome");
-		super.goto_url("http://jqueryui.com/demos/datepicker/");
-		
-		
-	}
-}
