@@ -44,5 +44,17 @@
 		<input id="disabled_filled_textfield" type="text" disabled="disabled" value="AAA"/>
 		
 		<input id="hidden_filled_textfield" type="text" value="AAA" hidden="true"/>
+		
+		<br/><br/>
+		
+		<textarea id="enabled_blank_textarea"></textarea>
+		
+		<textarea id="enabled_filled_textarea">BBB</textarea>
+		
+		<textarea id="disabled_blank_textarea" disabled="disabled"></textarea>
+		
+		<textarea id="disabled_filled_textarea" disabled="disabled">BBB</textarea>
+		
+		<textarea id="hidded_filled_textarea" hidden="true">BBB</textarea>
 	</body>
 </html>
